ajuste de article en about

--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -34,9 +34,13 @@
                 <img src="../images/julio.jpg" alt="julio" width="200">
                 <h3>Julio</h3>
                 <h4>Employee</h4>
+            </article>
+            <article>
                 <img src="../images/monica.jpg" alt="monica" width="200">
                 <h3>Monica</h3>
                 <h4>Manager</h4>
+            </article>
+            <article>
                 <img src="../images/enrique.jpg" alt="enrique" width="200">
                 <h3>Enrique</h3>
                 <h4>Employee</h4>
