style aplicado a index y about

--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <header>
@@ -20,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="informacion">
             <h2>About Us</h2>
             <p>We are a specialty sports equipment store with a passion for helping 
             our customers achieve their sports goals and objectives. Our team is 
@@ -28,25 +29,25 @@
             who are always willing to offer advice and recommendations to help you 
             find the perfect equipment for your needs.</p>
         </section>
-        <section>
+        <section class="equipo">
             <h2>Meet our team</h2>
-            <article>
-                <img src="../images/julio.jpg" alt="julio" width="200">
+            <article class="vendedor">
+                <img src="../images/julio.jpg" alt="julio" class="imagen-equipo">
                 <h3>Julio</h3>
                 <h4>Employee</h4>
             </article>
-            <article>
-                <img src="../images/monica.jpg" alt="monica" width="200">
+            <article class="vendedor">
+                <img src="../images/monica.jpg" alt="monica" class="imagen-equipo">
                 <h3>Monica</h3>
                 <h4>Manager</h4>
             </article>
-            <article>
-                <img src="../images/enrique.jpg" alt="enrique" width="200">
+            <article class="vendedor">
+                <img src="../images/enrique.jpg" alt="enrique" class="imagen-equipo">
                 <h3>Enrique</h3>
                 <h4>Employee</h4>
             </article>
         </section>
-        <section>
+        <section class="informacion">
             <h2>Our Values</h2>
             <p><span>Value 1:</span>Passion for sports and physical activity</p>
             <p><span>Value 2:</span>Commitment to quality and excellence.</p>
