pagina de productos

--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -16,12 +16,12 @@
         <nav>
             <a href="../../index.html">Home</a>
             <a href="#">About Us</a>
-            <a href="#">Products</a>
+            <a href="../pages/products.html">Products</a>
             <a href="#">Contacts</a>
         </nav>
     </header>
     <main>
-        <section class="informacion">
+        <section>
             <h2>About Us</h2>
             <p>We are a specialty sports equipment store with a passion for helping 
             our customers achieve their sports goals and objectives. Our team is 
@@ -29,30 +29,36 @@
             who are always willing to offer advice and recommendations to help you 
             find the perfect equipment for your needs.</p>
         </section>
-        <section class="equipo">
+        <section>
             <h2>Meet our team</h2>
-            <article class="vendedor">
-                <img src="../images/julio.jpg" alt="julio" class="imagen-equipo">
+            <article>
+                <img src="../images/julio.jpg" alt="julio">
                 <h3>Julio</h3>
                 <h4>Employee</h4>
             </article>
-            <article class="vendedor">
-                <img src="../images/monica.jpg" alt="monica" class="imagen-equipo">
+            <article>
+                <img src="../images/monica.jpg" alt="monica">
                 <h3>Monica</h3>
                 <h4>Manager</h4>
             </article>
-            <article class="vendedor">
-                <img src="../images/enrique.jpg" alt="enrique" class="imagen-equipo">
+            <article>
+                <img src="../images/enrique.jpg" alt="enrique">
                 <h3>Enrique</h3>
                 <h4>Employee</h4>
             </article>
         </section>
-        <section class="informacion">
+        <section>
             <h2>Our Values</h2>
-            <p><span>Value 1:</span>Passion for sports and physical activity</p>
-            <p><span>Value 2:</span>Commitment to quality and excellence.</p>
-            <p><span>Value 3:</span>Exceptional Customer Service.</p>
-            <p><span>Value 4:</span>Respect and support for the local sports community.</p>
+            <dl>
+                <dt>Value 1</dt>
+                <dd>Passion for sports and physical activity</dd>
+                <dt>Value 2</dt>
+                <dd>Commitment to quality and excellence</dd>
+                <dt>Value 3</dt>
+                <dd>Exceptional Customer Service</dd>
+                <dt>Value 4</dt>
+                <dd>Respect and support for the local sports community</dd>
+            </dl>
         </section>
     </main>
     <footer>
