--- a/index.html
+++ b/index.html
@@ -9,41 +9,41 @@
 </head>
 <body>
     <header>
-        <section id="banner">
+        <section">
             <img src="./assets/images/logo.png" alt="logo" width="50">
             <h1>Active Edge Sports</h1>
         </section>
         <nav>
             <a href="#">Home</a>
             <a href="./assets/pages/about.html">About Us</a>
-            <a href="#">Products</a>
+            <a href="./assets/pages/products.html">Products</a>
             <a href="#">Contacts</a>
         </nav>
     </header>
     <main>
-        <section id="presentacion">
+        <section>
             <h2>Welcome to Active Edge Sports</h2>
             <p>We are your destination for everything related to sports and fitness. 
             In our online store, you will find a wide variety of high-quality sporting goods and 
             recognized brands.</p>
         </section>
-        <section class="ventas">
+        <section>
             <h3>Our Products</h3>
-            <article class="productos">
+            <article>
                 <img src="./assets/images/Esterilla_de_Yoga_FlexiGrip.png" alt="esterilla-yoga">
                 <h4>Yoga Mat FlexiGrip</h4>
                 <p>High quality yoga mat and elegant design.</p>
                 <h5>$29.99</h5>
                 <a href="#">View Info</a>
             </article>
-            <article class="productos">
+            <article>
                 <img src="./assets/images/Zapatillas_de_Correr.png" alt="zapatillas-de-Correr">
                 <h4>ProFit Running Shoes</h4>
                 <p>High-performance running shoe with innovative design.</p>
                 <h5>$89.99</h5>
                 <a href="#">View Info</a>
             </article>
-            <article class="productos">
+            <article>
                 <img src="./assets/images/juego_de_pesas.png" alt="juego-de-pesas">
                 <h4>PowerMax Weight Set (20 lbs)</h4>
                 <p>High quality 20lb weights and durable design.</p>
@@ -51,11 +51,11 @@
                 <a href="#">View Info</a>
             </article>
         </section>
-        <section class="ventas">
+        <section>
             <h2>Categories</h2>
-            <img src="./assets/images/Calzados.png" alt="calzado" class="imagen-categoria">
-            <img src="./assets/images/equipo_fitness.png" alt="equipo-de-fitness" class="imagen-categoria">
-            <img src="./assets/images/deportes_al_aire_libre_equipamento.png" alt="deportes-aire-libre" class="imagen-categoria">
+            <img src="./assets/images/Calzados.png" alt="calzado">
+            <img src="./assets/images/equipo_fitness.png" alt="equipo-de-fitness">
+            <img src="./assets/images/deportes_al_aire_libre_equipamento.png" alt="deportes-aire-libre">
         </section>
     </main>
     <footer>
