demasiados cambios para nombrar algo

--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <section>
-            <img src="../images/logo.png" alt="logo" width="50">
+        <div class="header">
+            <img src="../images/logo.png" alt="logo">
             <h1>Active Edge Sports</h1>
-        </section>
-        <nav>
+        </div>
+        <nav class="navbar">
             <a href="../../index.html">Home</a>
             <a href="#">About Us</a>
             <a href="../pages/products.html">Products</a>
