--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <section>
-            <img src="../images/logo.png" alt="logo" width="50">
+        <div class="header">
+            <img src="../images/logo.png" alt="logo">
             <h1>Active Edge Sports</h1>
-        </section>
-        <nav>
+        </div>
+        <nav class="navbar">
             <a href="../../index.html">Home</a>
             <a href="../pages/about.html">About Us</a>
             <a href="#">Products</a>
@@ -83,6 +83,45 @@
         </section>
         <section>
             <h3>Benefits of Our Products</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th rowspan="2">Feature</th>
+                        <th colspan="3">Benefits</th>
+                    </tr>
+                    <tr>
+                        <th>Benefit 1</th>
+                        <th>Benefit 2</th>
+                        <th>Benefit 3</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Quality</td>
+                        <td>High durability</td>
+                        <td>Top materials</td>
+                        <td>Long-lasting</td>
+                    </tr>
+                    <tr>
+                        <td>Price</td>
+                        <td>Competitive pricing</td>
+                        <td>Best value</td>
+                        <td>Affordable</td>
+                    </tr>
+                    <tr>
+                        <td>Design</td>
+                        <td>Modern look</td>
+                        <td>Ergonomic</td>
+                        <td>Stylish</td>
+                    </tr>
+                    <tr>
+                        <td>Warranty</td>
+                        <td>2-years warranty</td>
+                        <td>Extended coverage</td>
+                        <td>Reliable support</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
 </body>
