--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <header>
-        <section">
-            <img src="./assets/images/logo.png" alt="logo" width="50">
+        <div class="header">
+            <img src="./assets/images/logo.png" alt="logo">
             <h1>Active Edge Sports</h1>
-        </section>
-        <nav>
-            <a href="#">Home</a>
-            <a href="./assets/pages/about.html">About Us</a>
-            <a href="./assets/pages/products.html">Products</a>
-            <a href="#">Contacts</a>
+        </div>
+        <nav class="navbar">
+                <a href="#">Home</a>
+                <a href="./assets/pages/about.html">About Us</a>
+                <a href="./assets/pages/products.html">Products</a>
+                <a href="#">Contacts</a>
         </nav>
     </header>
     <main>
-        <section>
+        <section class="presentacion">
             <h2>Welcome to Active Edge Sports</h2>
             <p>We are your destination for everything related to sports and fitness. 
             In our online store, you will find a wide variety of high-quality sporting goods and 
@@ -29,27 +29,29 @@
         </section>
         <section>
             <h3>Our Products</h3>
-            <article>
-                <img src="./assets/images/Esterilla_de_Yoga_FlexiGrip.png" alt="esterilla-yoga">
-                <h4>Yoga Mat FlexiGrip</h4>
-                <p>High quality yoga mat and elegant design.</p>
-                <h5>$29.99</h5>
-                <a href="#">View Info</a>
-            </article>
-            <article>
-                <img src="./assets/images/Zapatillas_de_Correr.png" alt="zapatillas-de-Correr">
-                <h4>ProFit Running Shoes</h4>
-                <p>High-performance running shoe with innovative design.</p>
-                <h5>$89.99</h5>
-                <a href="#">View Info</a>
-            </article>
-            <article>
-                <img src="./assets/images/juego_de_pesas.png" alt="juego-de-pesas">
-                <h4>PowerMax Weight Set (20 lbs)</h4>
-                <p>High quality 20lb weights and durable design.</p>
-                <h5>$59.99</h5>
-                <a href="#">View Info</a>
-            </article>
+            <div class="productos">
+                <article>
+                    <img src="./assets/images/Esterilla_de_Yoga_FlexiGrip.png" alt="esterilla-yoga">
+                    <h4>Yoga Mat FlexiGrip</h4>
+                    <p>High quality yoga mat and elegant design.</p>
+                    <h5>$29.99</h5>
+                    <a href="#">View Info</a>
+                </article>
+                <article>
+                    <img src="./assets/images/Zapatillas_de_Correr.png" alt="zapatillas-de-Correr">
+                    <h4>ProFit Running Shoes</h4>
+                    <p>High-performance running shoe with innovative design.</p>
+                    <h5>$89.99</h5>
+                    <a href="#">View Info</a>
+                </article>
+                <article>
+                    <img src="./assets/images/juego_de_pesas.png" alt="juego-de-pesas">
+                    <h4>PowerMax Weight Set (20 lbs)</h4>
+                    <p>High quality 20lb weights and durable design.</p>
+                    <h5>$59.99</h5>
+                    <a href="#">View Info</a>
+                </article>
+            </div>
         </section>
         <section>
             <h2>Categories</h2>
