estilos aplicados a about

--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
 </head>
-<body>
+<body class="body-about">
     <header>
         <div class="header">
             <img src="../images/logo.png" alt="logo">
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="about">
             <h2>About Us</h2>
             <p>We are a specialty sports equipment store with a passion for helping 
             our customers achieve their sports goals and objectives. Our team is 
@@ -29,27 +29,32 @@
             who are always willing to offer advice and recommendations to help you 
             find the perfect equipment for your needs.</p>
         </section>
-        <section>
-            <h2>Meet our team</h2>
-            <article>
-                <img src="../images/julio.jpg" alt="julio">
-                <h3>Julio</h3>
-                <h4>Employee</h4>
-            </article>
-            <article>
-                <img src="../images/monica.jpg" alt="monica">
-                <h3>Monica</h3>
-                <h4>Manager</h4>
-            </article>
-            <article>
-                <img src="../images/enrique.jpg" alt="enrique">
-                <h3>Enrique</h3>
-                <h4>Employee</h4>
-            </article>
+        <section class="team">
+            <h3>Meet our team</h3>
+            <div class="contenedor">
+                <article class="miembro">
+                    <img src="../images/julio.jpg" alt="julio">
+                    <h4>Julio</h4>
+                    <h5>Employee</h5>
+                    <p>The best in sales</p>
+                </article>
+                <article class="miembro">
+                    <img src="../images/monica.jpg" alt="monica">
+                    <h4>Monica</h4>
+                    <h5>Manager</h5>
+                    <p>Leadership and commitment</p>
+                </article>
+                <article class="miembro">
+                    <img src="../images/enrique.jpg" alt="enrique">
+                    <h4>Enrique</h4>
+                    <h5>Employee</h5>
+                    <p>A genius in the warehouse</p>
+                </article>
+            </div>
         </section>
-        <section>
-            <h2>Our Values</h2>
-            <dl>
+        <section class="nuestros-valores">
+            <h3>Our Values</h3>
+            <dl class="valores">
                 <dt>Value 1</dt>
                 <dd>Passion for sports and physical activity</dd>
                 <dt>Value 2</dt>
