estilos aplicados a productos

--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -21,108 +21,117 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h3>Our Products</h3>
-            <article>
-                <img src="../images/Esterilla_de_Yoga_FlexiGrip.png" alt="esterilla-yoga">
-                <h4>Yoga Mat FlexiGrip</h4>
-                <p>High quality yoga mat and elegant design.</p>
-                <h5>$29.99</h5>
-                <a href="#">View Info</a>
-            </article>
-            <article>
-                <img src="../images/Zapatillas_de_Correr.png" alt="zapatillas-de-Correr">
-                <h4>ProFit Running Shoes</h4>
-                <p>High-performance running shoe with innovative design.</p>
-                <h5>$89.99</h5>
-                <a href="#">View Info</a>
-            </article>
-            <article>
-                <img src="../images/juego_de_pesas.png" alt="juego-de-pesas">
-                <h4>PowerMax Weight Set (20 lbs)</h4>
-                <p>High quality 20lb weights and durable design.</p>
-                <h5>$59.99</h5>
-                <a href="#">View Info</a>
-            </article>
-            <article>
-                <img src="../images/nike_air_max_casual.jpeg" alt="nike-air-max">
-                <h4>Nike Air Max 270 Casual</h4>
-                <p>Sneakers designed for style and comfort.</p>
-                <h5>$79.90</h5>
-                <a href="#">View Info</a>
-            </article>
-            <article>
-                <img src="../images/Under_Armour_Tech_2_0_T-Shirt.png" alt="remera-under-armor">
-                <h4>Under Armour Tech 2.0 T-Shirt</h4>
-                <p>Lightweight and versatile option designed for active lifestyles.</p>
-                <h5>$29.90</h5>
-                <a href="#">View Info</a>
-            </article>
-            <article>
-                <img src="../images/Bell_Overdrive_Bike_Helmet.jpg" alt="casco-bicicleta">
-                <h4>Bell Overdrive Bike Helmet</h4>
-                <p>Lightweight fit system for comfort during long rides.</p>
-                <h5>$19.90</h5>
-                <a href="#">View Info</a>
-            </article>
-        </section>
-        <section>
-            <h3>Categories</h3>
-            <h4>Footwear</h4>
-            <p>Running Shoes</p>
-            <p>Training Shoes</p>
-            <p>Casual Shoes</p>
-            <h4>Fitness Equipment</h4>
-            <p>Exercise Equipment</p>
-            <p>Yoga and Pilates</p>
-            <h4>Outdoor sports</h4>
-            <p>Hiking and trekking</p>
-            <p>Water sports and activities</p>
-            <p>Camping equipment</p>
-            <p>Cycling accessories</p>
-        </section>
-        <section>
-            <h3>Benefits of Our Products</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th rowspan="2">Feature</th>
-                        <th colspan="3">Benefits</th>
-                    </tr>
-                    <tr>
-                        <th>Benefit 1</th>
-                        <th>Benefit 2</th>
-                        <th>Benefit 3</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Quality</td>
-                        <td>High durability</td>
-                        <td>Top materials</td>
-                        <td>Long-lasting</td>
-                    </tr>
-                    <tr>
-                        <td>Price</td>
-                        <td>Competitive pricing</td>
-                        <td>Best value</td>
-                        <td>Affordable</td>
-                    </tr>
-                    <tr>
-                        <td>Design</td>
-                        <td>Modern look</td>
-                        <td>Ergonomic</td>
-                        <td>Stylish</td>
-                    </tr>
-                    <tr>
-                        <td>Warranty</td>
-                        <td>2-years warranty</td>
-                        <td>Extended coverage</td>
-                        <td>Reliable support</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+        <div class="categorias-y-productos">
+            <section class="menu-lateral">
+                <h3>Categories</h3>
+                <h4>Footwear</h4>
+                <p>Running Shoes</p>
+                <p>Training Shoes</p>
+                <p>Casual Shoes</p>
+                <h4>Fitness Equipment</h4>
+                <p>Exercise Equipment</p>
+                <p>Yoga and Pilates</p>
+                <h4>Outdoor sports</h4>
+                <p>Hiking and trekking</p>
+                <p>Water sports and activities</p>
+                <p>Camping equipment</p>
+                <p>Cycling accessories</p>
+            </section>
+            <section class="seccion-productos">
+                <div>
+                    <h3>Our Products</h3>
+                    <div class="producto-grilla">
+                        <article class="cuadro-producto">
+                            <img src="../images/Esterilla_de_Yoga_FlexiGrip.png" alt="esterilla-yoga">
+                            <h4>Yoga Mat FlexiGrip</h4>
+                            <p>Best and high quality yoga mat.</p>
+                            <h5>$29.99</h5>
+                            <a href="#">View Info</a>
+                        </article>
+                        <article class="cuadro-producto">
+                            <img src="../images/Zapatillas_de_Correr.png" alt="zapatillas-de-Correr">
+                            <h4>ProFit Running Shoes</h4>
+                            <p>High-performance running shoe.</p>
+                            <h5>$89.99</h5>
+                            <a href="#">View Info</a>
+                        </article>
+                        <article class="cuadro-producto">
+                            <img src="../images/juego_de_pesas.png" alt="juego-de-pesas">
+                            <h4>PowerMax Weight Set (20 lbs)</h4>
+                            <p>High quality 20lb weights.</p>
+                            <h5>$59.99</h5>
+                            <a href="#">View Info</a>
+                        </article>
+                        <article class="cuadro-producto">
+                            <img src="../images/nike_air_max.png" alt="nike-air-max">
+                            <h4>Nike Air Max 270 Casual</h4>
+                            <p>Style and comfort.</p>
+                            <h5>$79.90</h5>
+                            <a href="#">View Info</a>
+                        </article>
+                        <article class="cuadro-producto">
+                            <img src="../images/under_armor_t-shirt.png" alt="remera-under-armor">
+                            <h4>Under Armour T-Shirt</h4>
+                            <p>Designed for active lifestyles.</p>
+                            <h5>$29.90</h5>
+                            <a href="#">View Info</a>
+                        </article>
+                        <article class="cuadro-producto">
+                            <img src="../images/bike_helmet.png" alt="casco-bicicleta">
+                            <h4>Bell Overdrive Bike Helmet</h4>
+                            <p>Lightweight fit system.</p>
+                            <h5>$19.90</h5>
+                            <a href="#">View Info</a>
+                        </article>
+                    </div>
+                    <section class="beneficios">
+                        <h3>Benefits of Our Products</h3>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th rowspan="2">Feature</th>
+                                    <th colspan="3">Benefits</th>
+                                </tr>
+                                <tr>
+                                    <th>Benefit 1</th>
+                                    <th>Benefit 2</th>
+                                    <th>Benefit 3</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Quality</td>
+                                    <td>High durability</td>
+                                    <td>Top materials</td>
+                                    <td>Long-lasting</td>
+                                </tr>
+                                <tr>
+                                    <td>Price</td>
+                                    <td>Competitive pricing</td>
+                                    <td>Best value</td>
+                                    <td>Affordable</td>
+                                </tr>
+                                <tr>
+                                    <td>Design</td>
+                                    <td>Modern look</td>
+                                    <td>Ergonomic</td>
+                                    <td>Stylish</td>
+                                </tr>
+                                <tr>
+                                    <td>Warranty</td>
+                                    <td>2-years warranty</td>
+                                    <td>Extended coverage</td>
+                                    <td>Reliable support</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </section>
+                </div>
+            </section>
+        </div>
     </main>
+    <footer>
+        <h6>&copy; 2025 Jose Gaston Morales. All rights reserved.</h6>
+    </footer>
 </body>
 </html>
