--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
-    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/images/favicon01.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <header>
         <div class="header">
-            <img src="../images/logo.png" alt="logo">
+            <img src="/assets/images/logo01.png" alt="logo">
             <h1>Active Edge Sports</h1>
         </div>
         <nav class="navbar">
