--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -17,7 +17,7 @@
             <a href="../../index.html">Home</a>
             <a href="#">About Us</a>
             <a href="../pages/products.html">Products</a>
-            <a href="#">Contacts</a>
+            <a href="../pages/contacts.html">Contact</a>
         </nav>
     </header>
     <main>
