--- a/assets/pages/products.html
+++ b/assets/pages/products.html
@@ -15,9 +15,9 @@
         </div>
         <nav class="navbar">
             <a href="../../index.html">Home</a>
-            <a href="../pages/about.html">About Us</a>
+            <a href="./about.html">About Us</a>
             <a href="#">Products</a>
-            <a href="#">Contacts</a>
+            <a href="./contacts.html">Contact</a>
         </nav>
     </header>
     <main>
