--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#">Home</a>
                 <a href="./assets/pages/about.html">About Us</a>
                 <a href="./assets/pages/products.html">Products</a>
-                <a href="#">Contacts</a>
+                <a href="./assets/pages/contacts.html">Contact</a>
         </nav>
     </header>
     <main>
