--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <header>
         <div class="header">
             <img src="/assets/images/logo01.png" alt="logo">
+        </div>
+        <div class="site-name">
             <h1>Active Edge Sports</h1>
         </div>
         <nav class="navbar">
