--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="../style/style.css">
 </head>
 <body class="body-about">
-    <header>
-        <div class="header">
+    <header class="encabezamiento">
+        <section class="header">
             <img src="/assets/images/logo01.png" alt="logo">
-        </div>
-        <div class="site-name">
-            <h1>Active Edge Sports</h1>
-        </div>
+            <div>
+                <h1>Active Edge Sports</h1>
+            </div>
+            <h2 class="trampa">////////////</h2>
+        </section>
         <nav class="navbar">
             <a href="../../index.html">Home</a>
             <a href="#">About Us</a>
