--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
-    <header>
-        <div class="header">
-            <img src="/assets/images/logo01.png" alt="logo">
-        </div>
-        <div class="site-name">
-            <h1>Active Edge Sports</h1>
-        </div>
+    <header class="encabezamiento">
+        <section class="header">
+                <img src="/assets/images/logo01.png" alt="logo">
+            <div>
+                <h1>Active Edge Sports</h1>
+            </div>
+            <h2 class="trampa">////////////</h2>
+        </section>
         <nav class="navbar">
                 <a href="#">Home</a>
                 <a href="./assets/pages/about.html">About Us</a>
