se arreglaron logo y link de contact

--- a/assets/pages/contacts.html
+++ b/assets/pages/contacts.html
@@ -10,14 +10,14 @@
 <body>
     <header class="encabezamiento">
         <section class="header">
-            <img src="/assets/images/logo01.png" alt="logo">
+            <img src="../../assets/images/logo01.png" alt="logo">
             <div>
                 <h1>Active Edge Sports</h1>
             </div>
             <h2 class="trampa">////////////</h2>
         </section>
         <nav class="navbar">
-                <a href="/index.html">Home</a>
+                <a href="../../index.html">Home</a>
                 <a href="./about.html">About Us</a>
                 <a href="./products.html">Products</a>
                 <a href="#">Contact</a>
