--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="encabezamiento">
         <section class="header">
-                <img src="/assets/images/logo01.png" alt="logo">
+                <img src="../../assets/images/logo01.png" alt="logo">
             <div>
                 <h1>Active Edge Sports</h1>
             </div>
